--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ function openDocFor(id, path) {
 
         <div class="student-box">
             <h3>📘 Әбубәкір Толғанай</h3>
-            <a onclick="openDocFor('tolganay', 'bexlan.pdf')">Құжатты ашу</a>
+            <a onclick="openDocFor('tolganay', 'Abubakir_Tolganai.pdf')">Құжатты ашу</a>
             <iframe id="tolganay"></iframe>
         </div>
 
