--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ function openDocFor(id, path) {
 
         <div class="student-box">
             <h3>📘 Алдашев Әмірхан мақала</h3>
-            <a onclick="openDocFor('amirkhan', 'batyr.pdf')">Құжатты ашу</a>
+            <a onclick="openDocFor('amirkhan', 'Amirkhan.pdf')">Құжатты ашу</a>
             <iframe id="amirkhan"></iframe>
         </div>
 
