--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ function openDocFor(id, path) {
 
         <div class="student-box">
             <h3>📘 Жанайдаров Бекзат мақала</h3>
-            <a onclick="openDocFor('bekzat', 'yasmin.pdf')">Құжатты ашу</a>
+            <a onclick="openDocFor('bekzat', 'Bekzat.pdf')">Құжатты ашу</a>
             <iframe id="bekzat"></iframe>
         </div>
 
