--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ function openDocFor(id, path) {
 
         <div class="student-box">
             <h3>📘 Қасен Айдана мақала</h3>
-            <a onclick="openDocFor('aidana', 'alina.pdf')">Құжатты ашу</a>
+            <a onclick="openDocFor('aidana', 'Aidana.pdf')">Құжатты ашу</a>
             <iframe id="aidana"></iframe>
         </div>
 
